[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popdesk"
version = "0.1.0"
description = "**ðŸ”” Trigger Windows desktop notifications from anywhere via webhooks ðŸŒ**"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyngrok",
    "python-dotenv",
    "pydantic",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
