[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "popdesk"
version = "0.1.0"
description = "**🔔 Trigger Windows desktop notifications from anywhere via webhooks 🌐**"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyngrok",
    "python-dotenv",
    "pydantic",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
exclude-newer = "7 days"
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]
